[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jelib"
version = "0.1.0"
description = "My personal Python sandbox."
authors = [
    { name = "Jack Einbinder", email = "jackeinbinder01@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["utilities", "systems", "debugging", "logging", "development"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "black"
]

[tool.setuptools.packages.find]
where = ["src"]
